[client]:added z-index for filter and modal to prevent ui issue

--- a/client/src/components/SelectWithDropdown/AppliedFilter/AppliedFilter.module.scss
+++ b/client/src/components/SelectWithDropdown/AppliedFilter/AppliedFilter.module.scss
@@ -8,7 +8,7 @@
   border-radius: 10px;
   line-height: 30px;
   margin-top: 4px;
-
+z-index: 1;
   .icon:hover svg path {
     transition: 0.5s;
     stroke: black;
